# hls-minimal-example

./: .gitignore  README.md  flake.nix  hls-minimal-example.cabal
src/: Main.hs
