cabal-version:       2.4
name:                hls-minimal-example
version:             0.0.0.0
license:             BSD-3-Clause
license-file:        LICENSE
category:            Application
build-type:          Simple
extra-doc-files:     README.md

executable example
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base

  ghc-options:         -Wall
                       -Werror

  default-language:    Haskell2010
